<resources>
    <string name="app_name">MyRunningBuddy</string>
    <string name="sign_in_to_start">Sign in to start</string>
    <string name="find_your_running_motivation">Find your running motivation</string>
    <string name="email">email</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="email_address_required">email address (required)</string>
    <string name="password_required">password (required)</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="API_ACCESS_TOKEN">API_ACCESS_TOKEN</string>
    <string name="API_REFRESH_TOKEN">API_REFRESH_TOKEN</string>
    <string name="API_EXPIRES_AT">API_EXPIRES_AT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="surname">surname</string>
    <string name="name_required">name (required)</string>
    <string name="location">location</string>
    <string name="write_something_about_yourself">write something about yourself</string>
    <string name="fill_in_basic_info">Fill in basic info</string>
    <string name="you_re_just_one_step_from_your_motivation">You\'re just one step from your motivation</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="user_successfully_registered">User successfully registered</string>
    <string name="internal_service_unavailable">Internal service is currently unavailable. Please try again later</string>
    <string name="internal_service_error">Internal service error</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="about_me">about me</string>
    <string name="runner_stats">runner stats</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="profile_image">profile image</string>
    <string name="profile_info_icon">profile info icon</string>
    <string name="runner_stats_icon">runner stats icon</string>
    <string name="didnt_fill_required_fields">You didn\'t fill all required fields</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="no_matches_available">There are no more matches available right now. Please try again later.</string>
    <string name="to_start_matching_connect_external_account">In order to start matching, please connect to one of the external accounts and record at least one run.</string>
    <string name="my_profile">My profile</string>
    <string name="find_a_runner">Find a runner</string>
    <string name="update_profile">Update profile</string>
    <string name="inbox">Inbox</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="external_accounts">External accounts</string>
    <string name="update_your_profile_info">Update your profile info</string>
    <string name="profile_info">Profile info</string>
    <string name="linked">Linked</string>
    <string name="not_linked">Not linked</string>
    <string name="avg_total_distance_per_week">Avg. total distance per week</string>
    <string name="avg_moving_time_per_week">Avg. moving time per week</string>
    <string name="avg_longest_distance_per_week">Avg. longest distance per week</string>
    <string name="avg_pace_per_week">Avg. pace per week</string>
    <string name="avg_start_time_per_week">Avg. start time per week</string>
    <string name="avg_total_elevation_per_week">Avg. total elevation per week</string>
    <string name="matching_priority_field">Matching priority field</string>
    <string name="none">none</string>
    <string name="new_match">New match</string>
    <string name="new_message">New message</string>
    <string name="load_more">load more</string>
    <string name="send">send</string>
    <string name="send_message_to">Send message to</string>
    <string name="logout">Logout</string>
</resources>