<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/nav_find_runner"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/find_a_runner" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/inbox" />
    <item
        android:id="@+id/nav_update_profile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/update_profile" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/logout" />
</menu>