<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UpdateProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/toolbar_main" android:id="@+id/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundLayer" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/update_your_profile_info"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/profile_info"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/surname"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/etSurname"
                    app:layout_constraintEnd_toStartOf="@+id/etSurname"
                    app:layout_constraintTop_toTopOf="@+id/etSurname" />

                <EditText
                    android:id="@+id/etSurname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/editTextHintColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/etLocation"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/etLocation" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/location"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/editTextHintColor"
                    app:layout_constraintEnd_toEndOf="@+id/etSurname"
                    app:layout_constraintStart_toStartOf="@+id/etSurname"
                    app:layout_constraintTop_toBottomOf="@+id/etSurname" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/etAboutMe"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/etAboutMe" />

                <EditText
                    android:id="@+id/etAboutMe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/write_something_about_yourself"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:textColor="@color/white"
                    android:textColorHint="@color/editTextHintColor"
                    app:layout_constraintEnd_toEndOf="@+id/etLocation"
                    app:layout_constraintStart_toStartOf="@+id/etLocation"
                    app:layout_constraintTop_toBottomOf="@+id/etLocation" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matching_priority_field"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="right"
                    app:layout_constraintBottom_toBottomOf="@+id/priorityField"
                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/priorityField" />

                <Spinner
                    android:id="@+id/priorityField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/etAboutMe"
                    app:layout_constraintStart_toStartOf="@id/etAboutMe"
                    app:layout_constraintEnd_toEndOf="@id/etAboutMe"/>

                <Button
                    android:id="@+id/btnUpdateProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="UpdateProfile"
                    android:text="@string/update_profile"
                    app:layout_constraintEnd_toEndOf="@+id/priorityField"
                    app:layout_constraintTop_toBottomOf="@+id/priorityField" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/external_accounts"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/btnUpdateProfile" />

                <ImageButton
                    android:id="@+id/btnStrava"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:onClick="ExternalAccountSync"
                    android:scaleType="fitXY"
                    android:src="@drawable/strava_logo"
                    app:layout_constraintEnd_toEndOf="@+id/etAboutMe"
                    app:layout_constraintStart_toStartOf="@+id/etAboutMe"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/tvStravaStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/btnStrava"
                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/btnStrava" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_nav" />

</androidx.drawerlayout.widget.DrawerLayout>